--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Menu-page</title>
+    <title>elPoncho</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
@@ -15,6 +15,13 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="first-header">
+      <video class="video-container"  muted autoplay loop>
+        <source src="./video.mp4" type="video/mp4">
+        </video>
+        <h1 id="descriptive">el poncho</h1>
+
+    </div>
     <section class="menu">
       <div class="title">
         <h2>our menu</h2>
