--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
   </head>
   <body>
     <div class="first-header">
-      <video class="video-container" id="video-container"  poster="bg.jpg" muted='muted' autoplay='true' loop='true'>
-        <source src="./video.mp4" type="video/mp4">
-        </video>
+      <video src="./video.mp4" poster="./bg.jpg" onclick="this.play();"class="video-container"/>
         <h1 id="descriptive">el poncho</h1>
 
     </div>
