--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   </head>
   <body>
     <div class="first-header">
-      <video src="./video.mp4" poster="./bg.jpg" onclick="this.play();"class="video-container"/>
+      <video class="video-container" id="video-container" controls muted loop>
+        <source src="./video.mp4" type="video/mp4">
+        </video>
         <h1 id="descriptive">el poncho</h1>
 
     </div>
