--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="first-header">
-      <video class="video-container" id="video-container" poster ="./bg.jpg" autoplay muted loop>
+      <video class="video-container" id="video-container" preloader="auto" poster ="./bg.jpg" autoplay muted loop>
         <source src="./video.mp4" type="video/mp4">
         </video>
         <h1 id="descriptive">el poncho</h1>
